ADD_SUBDIRECTORY( MpRtpTranslator )
ADD_SUBDIRECTORY( MultipathRTO )
ADD_SUBDIRECTORY( CldRtspServer )
IF (BUILD_CLOUD_CONTROL)
ADD_SUBDIRECTORY( RemoteCloudControlClient )
ADD_SUBDIRECTORY( RemoteCloudControlServer )
ADD_SUBDIRECTORY( RtcClient )
ADD_SUBDIRECTORY( RtcServer )
ENDIF (BUILD_CLOUD_CONTROL)
ADD_SUBDIRECTORY( RtpAgent )
ADD_SUBDIRECTORY( RtpAnalyser )
ADD_SUBDIRECTORY( RtpPacketiser )
ADD_SUBDIRECTORY( RtpProxy )
ADD_SUBDIRECTORY( RtpSender )
ADD_SUBDIRECTORY( RtpReceiver )
ADD_SUBDIRECTORY( RtspClient )
ADD_SUBDIRECTORY( RtspServer )
ADD_SUBDIRECTORY( SdpParser )
ADD_SUBDIRECTORY( SdpWriter )
#ADD_SUBDIRECTORY( SipAgent )
ADD_SUBDIRECTORY( SipClient )
ADD_SUBDIRECTORY( SipProxy )
ADD_SUBDIRECTORY( StatelessProxy )
ADD_SUBDIRECTORY( SvcRtpPacketiser )
ADD_SUBDIRECTORY( SvcRtpReceiver )
ADD_SUBDIRECTORY( SvcRtpSender )
ADD_SUBDIRECTORY( VideoAnalyser )
