#IF(NOT APPLE)
#ADD_SUBDIRECTORY( RtpW )
#ENDIF(NOT APPLE)
IF(BUILD_CLOUD_CONTROL)
ADD_SUBDIRECTORY( PeerConnectionApi )
ADD_SUBDIRECTORY( RemoteCloudControl )
ENDIF(BUILD_CLOUD_CONTROL)
IF(WIN32)
ADD_SUBDIRECTORY( SipSessionState )
ENDIF(WIN32)
IF(BUILD_OPEN_H264)
ADD_SUBDIRECTORY( OpenH264Codec )
ENDIF(BUILD_OPEN_H264)
IF(BUILD_VPP_H264)
ADD_SUBDIRECTORY( VppH264Codec )
ENDIF(BUILD_VPP_H264)
IF (NOT WIN32)
IF(BUILD_X264)
ADD_SUBDIRECTORY( X264Codec )
ENDIF(BUILD_X264)
ENDIF(NOT WIN32)
IF(BUILD_X265)
ADD_SUBDIRECTORY( X265Codec )
ENDIF(BUILD_X265)
IF(BUILD_SCREAM)
ADD_SUBDIRECTORY( scream )
ENDIF(BUILD_SCREAM)

